# frappe-tea

./: Cargo.toml  LICENSE  README.md  cargo.toml  rustfmt.toml
benches/: lib.rs
docs/vault/: components.core.dyn-child.md  components.core.frag.md  components.core.if.md  components.md  hmr.md  ssr.static-node-optimization.md  ssr.time-to-interactive.md
frappe-tea/: Cargo.toml
frappe-tea/benches/: lib.rs
frappe-tea/docs/vault/: components.core.dyn-text.md  components.core.each.md  hmr.diffing.md  root.md  ssr.md  ssr.static-node-optimization.md
frappe-tea/js/: browser-or-node.js
frappe-tea/src/: bindings.rs  components.rs  html.rs  lib.rs  non_wasm.rs  reactive.rs  utils.rs  wasm.rs
frappe-tea/src/components/: dyn_child.rs  if_.rs
frappe-tea/tests/: web.rs
frappe-tea/tests/components/: if_.rs  mod.rs
src/: components.rs  html.rs  lib.rs  reactive.rs  runtime.rs  testing.rs  utils.rs  view.rs
src/components/: dyn_child.rs  if_.rs
src/components/each/: mod.rs
tests/: node.rs  web.rs
