[package]
name = "frappe-tea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["web", "ssr", "hydrate", "hot-reload"]
web = [
    "gloo",
    "js-sys",
    "wasm-bindgen",
    "wasm-bindgen-futures",
]
ssr = []
hydrate = []
hot-reload = []
time-travel = []

[dependencies]
clone-macro = "0.1"
derive-getters = "0.2"
derive_more = "0.99"
educe = "0.4"
error-stack = { version = "0.2", default-features = false }
futures = "0.3"
gloo = { version = "0.8", optional = true }
js-sys = { version = "0.3", optional = true }
static_assertions = "1"
tracing = "0.1"
typed-builder = "0.10"
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "Comment",
    "DocumentFragment",
    "Node",
    "Text"
]

[dev-dependencies]
criterion = "0.4"
wasm-bindgen-test = "0.3"