[package]
name = "frappe-tea"
version = "0.0.0"
edition = "2021"
description = "Framework founded upon Functional Reactivity with the Elm Architecture, VDOM-less, providing unseen performance, reliability, and testability."
repository = "https://github.com/jquesada2016/frappe-tea"
authors = ["Jose Quesada <jquesada2016@fau.edu>"]
keywords = ["frp", "elm", "frontend", "framework", "ssr"]
license = "MIT"
categories = ["gui", "no-std", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
aquamarine = "0.1"
contracts = "0.6"
enum_dispatch = "0.3"
futures = "0.3"
static_assertions = "1.1"
log = "0.4"
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo = "0.6"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"


[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Comment",
    "Document",
    "Text",
]

[dev-dependencies]
mockall = "0.11"
proptest = "1.0"