[package]
name = "frappe-tea"
version = "0.0.0"
edition = "2021"
description = "Framework founded upon Functional Reactivity with the Elm Architecture, VDOM-less, providing unseen performance, reliability, and testability."
repository = "https://github.com/jquesada2016/frappe-tea"
authors = ["Jose Quesada <jquesada2016@fau.edu>"]
keywords = ["frp", "elm", "frontend", "framework", "ssr"]
license = "MIT"
categories = ["gui", "no-std", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "lib"
harness = false

[features]
default = ["ssr", "hmr", "web-tests"]
ssr = ["base64", "bincode", "serde"]
web-tests = []
node-tests = []
hmr = ["base64", "bincode", "serde"]

[dependencies]
async-trait = "0.1"
aquamarine = "0.1"
base64 = { version = "0.13", optional = true }
bincode = { version = "1.0", optional = true }
clone-macro = "0.1"
contracts = "0.6"
educe = "0.4"
enum_dispatch = "0.3"
futures = "0.3"
log = "0.4"
paste = "1.0"
serde = { version = "1.0", optional = true }
static_assertions = "1.1"
typed-builder = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo = "0.6"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Comment",
    "Document",
    "Text",
    "Event",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.17", features = ["rt"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.web-sys]
version = "0.3"
features = [
    "Event"
]

[dev-dependencies]
criterion = "0.3"
# Fixes issue with proptest not building on wasm32-unknown-unknwon target
getrandom = { version = "0.2", features = ["js"] }
mockall = "0.11"
ntest = "0.7"
proptest = { version = "1.0", default-features = false, features = ["std"] }
tokio = { version = "1.17", features = ["macros"] }
wasm-bindgen-test = "0.3"